[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/interactive_area.gd" type="Script" id=1]

[node name="InteractiveArea" type="Area2D"]
collision_layer = 4
script = ExtResource( 1 )

[connection signal="area_entered" from="." to="." method="_on_InteractiveArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_InteractiveArea_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_InteractiveArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractiveArea_body_exited"]
